--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=AppointmentScheduler
 spring.datasource.name=appointmentscheduler
 spring.datasource.url=jdbc:mysql://localhost:3306/appointmentscheduler
 spring.datasource.username=root
-spring.datasource.password=Nnp040119
+spring.datasource.password=hello_mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
